--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>PLANNED OBSOLESCENCE</title>
+    <title>PLA(N)NED OBSOLESCENCE</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
